# monzo-python

./: README.md  pyproject.toml  setup.py
monzo/: __init__.py  auth.py  errors.py  monzo.py
tests/: test_api_errors.py
tests/doubles/: monzo.py
