[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "monzo"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
description = "Monzo Python SDK"
authors = [
    { name = "Owen Voke", email = "development@voke.dev" }
]
keywords = ["monzo", "sdk"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9.0"
dependencies = [
    "requests~=2.31",
    "requests-oauthlib~=1.3",
    "python-dotenv~=1.0"
]

[project.urls]
"Source Code" = "https://github.com/owenvoke/monzo-python"
"Issues" = "https://github.com/owenvoke/monzo-python/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["monzo"]

[tool.hatch.envs.default]
dependencies = [
    "black",
    "pytest==7.4"
]

[tool.hatch.envs.default.scripts]
test = [
    "black --check --diff .",
    "pytest",
]
lint = [
    "black ."
]

[tool.black]
target-version = ["py39", "py310", "py311"]
